backend/kubernetes/microserviceedt-k8s/microserviceedt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microserviceedt
  namespace: sn-ugb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microserviceedt
      version: "v1"
  template:
    metadata:
      labels:
        app: microserviceedt
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - microserviceedt
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: microserviceedt-app
          image: eUGB/microserviceedt
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8085
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
