backend/kubernetes/microserviceedt-k8s/microserviceedt-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microserviceedt-postgresql
  namespace: sencookseur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microserviceedt-postgresql
  template:
    metadata:
      labels:
        app: microserviceedt-postgresql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: microserviceedt-postgresql-pvc
      containers:
        - name: postgres
          image: postgres:16.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: microserviceedt-postgresql
  namespace: sencookseur
spec:
  selector:
    app: microserviceedt-postgresql
  ports:
    - port: 5432
