backend/kubernetes/microserviceedt-k8s/microserviceedt-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microserviceedt
  namespace: sn-ugb
  labels:
    app: microserviceedt
spec:
  selector:
    app: microserviceedt
  ports:
    - name: http
      port: 8085
