backend/kubernetes/microserviceedt-k8s/microserviceedt-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: microserviceedt-virtualservice
  namespace: sn-ugb
spec:
  hosts:
    - microserviceedt
  http:
    - route:
        - destination:
            host: microserviceedt
            subset: "v1"
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
